--- a/app/src/main/res/layout/dialog_selector.xml
+++ b/app/src/main/res/layout/dialog_selector.xml
@@ -23,51 +23,39 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_options_dialog"
         android:elevation="20dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textView_singleSelectionDialog_title"
+            style="@style/MPAppTheme.DialogHeader"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/background_title_dialog"
-            android:paddingBottom="@dimen/margin_small"
+            android:gravity="center_vertical"
+            android:paddingTop="@dimen/margin_default"
+            android:paddingBottom="@dimen/margin_default"
+            android:paddingStart="@dimen/margin_default"
+            android:paddingEnd="50dp"
+            android:text="@{title}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Aviso sobre a deleção " />
 
-            <TextView
-                android:id="@+id/textView_singleSelectionDialog_title"
-                style="@style/MPAppTheme.DialogHeader"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/margin_xsmall"
-                android:layout_marginBottom="@dimen/margin_small"
-                android:gravity="center_vertical"
-                android:paddingStart="@dimen/margin_default"
-                android:paddingEnd="@dimen/margin_default"
-                android:text="@{title}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageView_singleSelectionDialog_close"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageView_singleSelectionDialog_close"
-                tools:text="Aviso sobre a deleção" />
-
-            <ImageView
-                android:id="@+id/imageView_singleSelectionDialog_close"
-                android:layout_width="@dimen/dialog_close_size"
-                android:layout_height="@dimen/dialog_close_size"
-                android:layout_marginTop="@dimen/margin_medium"
-                android:layout_marginEnd="@dimen/margin_default"
-                android:background="@drawable/circle_background2"
-                android:padding="@dimen/margin_small"
-                android:src="@drawable/ic_close"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/imageView_singleSelectionDialog_close"
+            android:layout_width="@dimen/dialog_close_size"
+            android:layout_height="@dimen/dialog_close_size"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_default"
+            android:background="@drawable/circle_background2"
+            android:padding="@dimen/margin_small"
+            android:src="@drawable/ic_close"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView_singleSelectionDialog"
@@ -77,7 +65,7 @@
             app:layout_constraintBottom_toTopOf="@+id/materialButton_singleSelectionDialog_cancel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/textView_singleSelectionDialog_title" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/materialButton_singleSelectionDialog_confirm"
