--- a/app/src/main/res/layout/dialog_warning.xml
+++ b/app/src/main/res/layout/dialog_warning.xml
@@ -17,51 +17,39 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_options_dialog"
         android:elevation="20dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textView_warningDialog_title"
+            style="@style/MPAppTheme.DialogHeader"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/background_title_dialog"
-            android:paddingBottom="@dimen/margin_small"
+            android:gravity="center_vertical"
+            android:paddingStart="@dimen/margin_default"
+            android:paddingTop="@dimen/margin_default"
+            android:paddingEnd="50dp"
+            android:paddingBottom="@dimen/margin_default"
+            android:text="@{title}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Selecionar tipo de obra" />
 
-            <TextView
-                android:id="@+id/textView_warningDialog_title"
-                style="@style/MPAppTheme.DialogHeader"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/margin_xsmall"
-                android:layout_marginBottom="@dimen/margin_small"
-                android:gravity="center_vertical"
-                android:paddingStart="@dimen/margin_default"
-                android:paddingEnd="@dimen/margin_default"
-                android:text="@{title}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageView_warningDialog_close"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageView_warningDialog_close"
-                tools:text="Selecionar tipo de obra" />
-
-            <ImageView
-                android:id="@+id/imageView_warningDialog_close"
-                android:layout_width="@dimen/dialog_close_size"
-                android:layout_height="@dimen/dialog_close_size"
-                android:layout_marginTop="@dimen/margin_medium"
-                android:layout_marginEnd="@dimen/margin_default"
-                android:background="@drawable/circle_background2"
-                android:padding="@dimen/margin_small"
-                android:src="@drawable/ic_close"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/imageView_warningDialog_close"
+            android:layout_width="@dimen/dialog_close_size"
+            android:layout_height="@dimen/dialog_close_size"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_default"
+            android:background="@drawable/circle_background2"
+            android:padding="@dimen/margin_small"
+            android:src="@drawable/ic_close"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView_warningDialog"
@@ -74,10 +62,9 @@
             android:minHeight="100dp"
             android:paddingBottom="@dimen/margin_medium"
             android:text="@{message}"
-            app:layout_constraintBottom_toTopOf="@+id/materialButton_warningDialog_confirm"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+            app:layout_constraintTop_toBottomOf="@+id/textView_warningDialog_title"
             tools:text="A coleta não poderá ser restaurada" />
 
         <com.google.android.material.button.MaterialButton
@@ -87,10 +74,11 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_small"
             android:layout_marginBottom="@dimen/margin_small"
-            android:textColor="@color/colorRed"
             android:text="@string/button_confirm"
+            android:textColor="@color/colorRed"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_warningDialog" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/materialButton_warningDialog_cancel"
